# libwdicpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: config.h.in  libwdi.cmake  util.cmake
examples/: CMakeLists.txt
examples/simple/: CMakeLists.txt  simple.cpp
